[improve][client] PIP-421: Require Java 17 as the minimum for Pulsar Java client SDK (#24475)
Co-authored-by: Claude <noreply@anthropic.com>